Fix the problem that Checkbox clicks 2 times on IE browser to select

--- a/src/Checkbox/styles/common.less
+++ b/src/Checkbox/styles/common.less
@@ -23,6 +23,8 @@
   top: @checkbox-sense-width;
 
   [type='checkbox'] {
+    width: 0;
+    height: 0;
     opacity: 0;
   }
 
